Configured the project to use Bootstrap

--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -2,7 +2,7 @@
   <h1>Quotes</h1>
 </div>
 <div class="container">
-  <ul>
-    <li *ngFor="let quote of quotes">{{ quote.text }}</li>
+  <ul class="list-group">
+    <li *ngFor="let quote of quotes" class="list-group-item">{{ quote.text }}</li>
   </ul>
 </div>
